# ece574-spring2024

homework1/: DPCL_LAT.txt  NETLISTS_LAT.txt  README.txt
homework1/circuits/: 474a_circuit1.v  474a_circuit3.v  474a_circuit4.v  574a_circuit6.v  circuit1.v  circuit2.v  circuit5.v
homework1/datapath_components/: ADD.v  COMP.v  DIV.v  MOD.v  MUL.v  MUX2x1.v  REG.v  SHL.v  SHR.v  SUB.v
homework1/testbenches/: ADD_tb.v  COMP_tb.v  DIV_tb.v  REG_tb.v  SHL_tb.v  SHR_tb.v  circuit2_tb.v  circuit4_tb.v  circuit6_tb.v
homework2/: CMakeLists.txt  README.txt
homework2/datapath_components/: COMP.v  DEC.v  DIV.v  INC.v  SADD.v  SCOMP.v  SDEC.v  SDIV.v  SINC.v  SMOD.v  SMUL.v  SMUX2x1.v  SSHL.v  SSHR.v  SSUB.v
homework2/hls/: CMakeLists.txt  NetlistParser.cpp  NetlistParser.h  VerilogGenerator.cpp  VerilogGenerator.h  main.cpp
homework2/latency/: Makefile
homework2/latency/circuits/: 474a_circuit1.txt  474a_circuit2.txt  474a_circuit4.txt  circuit.txt  circuit1.txt  ucircuit1.txt
homework2/latency/include/: graph.h  header.h
homework2/latency/src/: graph.cpp  main.cpp
homework2/src/: CMakeLists.txt  NetlistParser.cpp  NetlistParser.h  VerilogGenerator.cpp  graph.cpp  graph.h  header.h  main.cpp
homework2/testbenches/: DEC_tb.v  INC_tb.v  MOD_tb.v  MUL_tb.v  MUX2x1_tb.v  SADD_tb.v  SCOMP_tb.v  SDEC_tb.v  SDIV_tb.v  SINC_tb.v  SMOD_tb.v  SMUL_tb.v  SMUX2x1_tb.v  SSHL_tb.v  SSHR_tb.v  SSUB_tb.v  SUB_tb.v
homework3/: CMakeLists.txt  README.md  README.txt
homework3/intermediate_test_files/: README.md  class_example.txt  hls_test1.txt  hls_test2.txt
homework3/src/: CMakeLists.txt  NetlistParser.cpp  NetlistParser.h  OpPostProcess.cpp  OpPostProcess.h  VerilogGenerator.cpp  VerilogGenerator.h  fds.cpp  fds.h  graph.cpp  graph.h  main.cpp  utils.cpp
homeworks/: test
